@@ -7,6 +7,7 @@
 - [LevelDB] Up sources to version 1.18
 - [SSDB] Up sources to version 1.9.2
 - [UnQLite] Up sources to version 1.1.6
+- [RocksDB] Up sources to version 4.4.0
 
 0.5.6 / October 18, 2015
 [Alexandr Topilski]
